[package]
name = "umers"
version = "0.1.0"

authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"

clap = "4.1.*"
tera = "1.17.*"
lazy_static = "1.4.*"

serde = { version = "1.0.*", features = ["derive"]}
serde_yaml = "0.9.*"
